update index.adoc and params

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -11,7 +11,7 @@ endif::[]
 ifeval::[{mlm-content} == true]
 [IMPORTANT]
 ====
-We are currently in the process of enhancing the [.currentrel]**{productnumber}** documentation. 
+We are currently in the process of enhancing the [.currentrel]**{productnumber}** **{currentversion}** documentation. 
 
 **We Value Your Input:** Your feedback is crucial to us! 
 If you find any aspects of the documentation unclear or notice missing information, please do not hesitate to reach out. 
