--- a/modules/legal/pages/eula.adoc
+++ b/modules/legal/pages/eula.adoc
@@ -9,7 +9,7 @@ PDF version of this document can be downloaded from here https://www.suse.com/li
 ====
 
 
-=== End User License Agreement for SUSE Software
+== End User License Agreement for SUSE Software
 
 BY PURCHASING, INSTALLING, DOWNLOADING OR OTHERWISE USING THE SOFTWARE (AS
 DEFINED BELOW), YOU AGREE TO THE TERMS OF THIS AGREEMENT. IF YOU DO NOT AGREE WITH
@@ -35,9 +35,9 @@ contracts to be in the local language to be enforceable, You can obtain a local 
 version by writing to Licensor and the local language version shall govern Your use of the
 Software.
 
-=== License Terms
+== License Terms
 
-==== Open Source
+=== Open Source
 
 The Software contains many individual components that are open source software. The
 open source license for each component, which, depending on the software program, may
@@ -58,7 +58,7 @@ install the third party programs on more than one system or transfer the third p
 programs to another party, then you must contact the licensor of the applicable third party
 programs.
 
-==== License to use the Software
+=== License to use the Software
 
 Subject to compliance with the terms and conditions of this EULA and of the applicable OSS
 License, you are granted a perpetual, non- exclusive, non-transferable, revocable,
@@ -71,26 +71,26 @@ Software, but only if permitted under a separate written agreement with Licensor
 authorizing such redistribution, or (b) the constituent components of the Software, but only
 if You remove and replace all occurrences of any SUSE Mark.
 
-==== Ownership
+=== Ownership
 
 The Software is licensed, not sold. No title to or ownership of the Software is transferred to
 You. Licensor and/or the third party licensors retain all right, title and interest in and to all
 intellectual property rights in the Software.
 
-==== SUSE Marks
+=== SUSE Marks
 
 No right or license, express or implied, is granted under this EULA to use any SUSE Mark,
 trade name or service mark of Licensor or its affiliates or licensors.
 
-==== Subscription Services and Support
+=== Subscription Services and Support
 
 Licensor has no obligation to provide maintenance or support unless otherwise agreed
 pursuant to an additional agreement that expressly includes such services.
 
 
-=== Warranty and Liability
+== Warranty and Liability
 
-==== Limited Warranty
+=== Limited Warranty
 
 THE SOFTWARE IS PROVIDED “AS IS” WITHOUT ANY WARRANTIES OF ANY KIND.
 EXCEPT AS OTHERWISE RESTRICTED BY LAW, LICENSOR DISCLAIMS AND EXCLUDES ANY AND ALL
@@ -123,9 +123,9 @@ of any Software obtained pursuant to this EULA or for fraudulent misrepresentati
 Licensor's liability shall be limited or excluded to the maximum extent allowed within those
 jurisdictions.
 
-=== General Terms
+== General Terms
 
-==== Law
+=== Law
 
 All matters arising out of or relating to this EULA will be governed by the substantive laws of
 the United States and the State of New York without regard to its choice of law provisions.
@@ -140,7 +140,7 @@ Uniform Computer Information Transaction Act, the United Nations Convention of
 Contracts for the International Sale of Goods, nor the New York or England and Wales
 conflict of law rules apply to this EULA or its subject matter.
 
-==== Entire Agreement
+=== Entire Agreement
 
 This EULA, together with any other purchase documents or other written agreement
 between You and Licensor or its Affiliates, sets forth the entire understanding and
@@ -151,7 +151,7 @@ AUTHORIZED TO MODIFY THIS AGREEMENT OR TO MAKE ANY REPRESENTATION OR PROMISE THA
 IS DIFFERENT FROM, OR IN ADDITION TO, THE TERMS OF THIS AGREEMENT.
 
 
-==== Severability
+=== Severability
 
 If any provision in this EULA is invalid or unenforceable, that provision will be construed,
 limited, modified or, if necessary, severed, to the extent necessary, to eliminate its invalidity
