--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -12,7 +12,7 @@ ifeval::[{mlm-content} == true]
 [IMPORTANT]
 ====
 We are currently in the process of updating and enhancing the [.currentrel]**{productnumber}** documentation.
-Please note that this documentation is currently in draft form and should be considered a work in progress (WIP).
+Please note that this documentation is currently in **draft** form and should be considered a work in progress (WIP).
 
 The final release of version 5.1 is expected mid 2025. Until then, content may evolve, and certain sections may be incomplete or subject to change.
 
