Add a note about the vm images and a step specific for SLES (#3901) (#3911)
* Add a note about the vm images and a step specific for SLES (#3901)
* use bci-mlm and sl-micro macro
* reuse contents from #3881
Co-authored-by: Abid Mehmood <amehmood@suse.de>

--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
@@ -22,6 +22,8 @@ All tools are included in these images simplifying deployment.
 // 2025-02-17, ke: as of today, suse-manager directory is still in use
 Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
+include::./snippet-warn-images-sl-micro.adoc[]
+
 [NOTE]
 ====
 For more information on preparing raw images, see https://documentation.suse.com/sle-micro/6.1/html/Micro-deployment-raw-images-virtual-machines/index.html#deployment-preparing-configuration-device[].
