--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
@@ -21,10 +21,13 @@ All tools are included in these images greatly simplifying deployment.
 
 Images for {productname} {productnumber} are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
+
+include::./snippet-warn-images-sl-micro.adoc[]
+
 ////
 // FIXME: For the moment, disable misleading info about raw image here.
-[NOTE]
-====
+// [NOTE]
+// ====
 // For more information on preparing raw images, see:
 //
 // * link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#sec-raw-preparation[]
