Improve wording for clarity (per feedback) CA key during server deployment

--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
@@ -375,7 +375,7 @@ podman login -u <EMAIL> -p <REGISTRATION-CODE> registry.suse.com
 Use the {productname} {productnumber} registration key when prompted.
 ====
 
-. Enter a certificate and administrator account password when prompted.
+. Enter CA key (certificate authority) and administrator account password when prompted.
 +
 
 [NOTE]
