--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -30,7 +30,7 @@ There are two ways to register a peripheral server to the hub server:
 
 . by using a combination of token creation on the peripheral, and subsequent registration on the hub server.
   This method uses <<peripheral-token-generation>> and <<token-transfer>>.
-. by direct registration from the hub, without any interactions with the peripheral server. 
+. by direct registration from the hub, without any user interactions with the peripheral server. 
   The steps for this method are described in <<direct-registration>>.
 
 
