--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -94,7 +94,7 @@ It is possible to initiate the registration of a peripheral server from hub serv
   * Use option [literal]``Upload a file`` if the servers have different certificate authorities to upload a certificate file.
   * Use option [literal]``Paste a PEM certificate`` in cases when PEM certificate is used.
 . Click button btn:[Register].
-. The newly reigistered peripheral server will be shown in the menu:Systems[System List] with the value [literal]``Foreign`` in the column [literal]``System Type``.
+. The newly registered peripheral server will be shown in the menu:Systems[System List] with the value [literal]``Foreign`` in the column [literal]``System Type``.
 . To access its details, click on the peripheral server's name and select tab menu:Details[Peripheral Server].
 
 Peripheral server uses hub to access the vendor channels and does not connect to the {scclongform} directly.
