More changes made following the review.

--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -92,7 +92,14 @@ It is possible to initiate the registration of a peripheral server from hub serv
   A new form [literal]``Register a new peripheral server`` opens.
 . In the field [literal]``Peripheral Server FQDN`` enter the name of the peripheral server.
 . In the field [literal]``Registration mode`` select option [literal]``Administrator User/Password``.
-. In the fields [literal]``Username`` and [literal]``Password`` enter the credentials for the peripheral server.
+. In the fields [literal]``Username`` and [literal]``Password`` enter the credentials for the peripheral server. 
+
++
+[IMPORTANT]
+====  
+The credentials must be those of [literal]``SUSE Manager Administrator`` of the peripheral server.
+====
+
 . In the field [literal]``Root CA certificate`` specify the certificate using one of the options:
   * Use option [literal]``Not needed`` if both hub and peripheral servers have the same certificate authority.
   * Use option [literal]``Upload a file`` if the servers have different certificate authorities to upload a certificate file.
@@ -109,13 +116,34 @@ Therefore, if you open configured peripheral server's page menu:Admin[Setup Wiza
 
 All existing tokens are shown in menu:Hub Configuration[Access Tokens].
 
-A token can be [literal]``Consumed`` and [literal]``Issued``.
+A token can viewed as [literal]``Consumed`` and [literal]``Issued``, both from the perspective of the peripheral and the hub server.
+
+* From the perspective of the peripheral server:
+
++
 
 Consumed::
-This type of token is generated on the peripheral server and received by the hub server to be used
+The [literal]``Consumed``token is generated on the peripheral server and received by the hub server to be used.
+
++
 
 Issued::
-This type of token is issued by the hub server to be used by the peripheral server.
+The [literal]``Issued`` token is issued by the hub server to be used by the peripheral server.
+
+
+* From the perspective of the hub server:
+
++
+
+Consumed::
+The [literal]``Consumed``token is generated on the hub server and received by the peripheral server to be used.
+
++
+
+Issued::
+The [literal]``Issued`` token is issued by the peripheral server to be used by the hub server.
+
+
 
 In addition to being deleted, a token can also be invalidated.
 
