--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -176,7 +176,7 @@ A peripheral server can only have one hub server configured.
    Deleting the certificate will break the connection between servers.
 .. Field [literal]``GPG Public Key`` shows whether the GPG key has been configured for the hub server.
    For more information about GPG keys between hub and peripheral servers, see <<gpg-for-hub-online-sync>>.
-.. Field [literal]``Mirrir credentials`` is the username the peripheral server uses when connecting to the hub server to synchronize vendor channels.
+.. Field [literal]``Mirror credentials`` is the username the peripheral server uses when connecting to the hub server to synchronize vendor channels.
    This username is generated automatically on the hub server, and then transmitted to the peripheral server during the registration phase.
 
 
