--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -183,7 +183,7 @@ A peripheral server can only have one hub server configured.
 [[gpg-for-hub-online-sync]]
 ==== GPG key usage with hub online synhronization
 
-When the packages are signed with GPG key, the key is automatically transmitted from hub to peripheral server.
+When the metadata on the hub server are signed with a GPG key, the public key is automatically transmitted from hub to peripheral server.
 
 By default, {productname} is not signing meta data.
 Therefore, when the pripheral server is downloading data from the hub server, unless the customer has created their own GPG key then they have no way of checking if the downloaded rpms have valid signature.
