Clarifications for tokens.

--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -144,16 +144,17 @@ Issued::
 The [literal]``Issued`` token is issued by the peripheral server to be used by the hub server.
 
 
+==== Token operations
 
-In addition to being deleted, a token can also be invalidated.
-
-//TO DO: What is the fundamental difference between these two operations? In both cases the connection between hub and periperal will be stopped. Can the invalidated token be re-validated?
+A token can be invalidated, or deleted.
 
 Be careful when using option btn:[Invalidate] as it no longer grants access to the other server.
-Invalidating the token can be undone, and token can be made valid again at any time.
+This operation ensures that no communication will happen until a new token is generated if the existing one is compromised, or until the current token is reactivated.
+Invalidated token can be made valid again at any time.
 
 It is possible to delete a token.
-Deletion of the token can only occur when the token is not associated with a registered peripheral server or hub, and this action cannot be undone.
+Deleting is only possible when the server associated with the token is not registered as hub or peripheral.
+This operation cannot be undone.
 
 
 === Access hub server details from the peripheral server
