--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -187,7 +187,7 @@ A peripheral server can only have one hub server configured.
 When the metadata on the hub server are signed with a GPG key, the public key is automatically transmitted from hub to peripheral server.
 
 By default, {productname} is not signing meta data.
-Therefore, when the pripheral server is downloading data from the hub server, unless the customer has created their own GPG key then they have no way of checking if the downloaded rpms have valid signature.
+Therefore, when the peripheral server is downloading data from the hub server there is no way of checking if the downloaded metadata have a valid signature, unless the customer has created their own GPG key.
 
 To enable checking of the data integrity, the GPG key needs to be created on the hub side.
 When the peripheral server is configured to communicate with the hub, the public GPG key will then automatically be transferred to it.
