--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -170,7 +170,7 @@ A peripheral server can only have one hub server configured.
 . On the peripheral server, go to menu:Hub Configuration[Hub Details].
 . On the screen [literal]``Hub Details`` find the information about the hub server.
 .. Field [literal]``Server FQDN`` shows the hub server's FQDN.
-.. Field [literal]``Registration date`` shows the time when the peripheral serevr was registsred to the hub server. 
+.. Field [literal]``Registration date`` shows the time when the peripheral server was registered to the hub server. 
 .. Field [literal]``Last modified`` shows the time of the last saved configuration change. 
 .. Field [literal]``Root Certificate Authority`` shows certificate details.
    To download, edit or delete the root certificate, clicking btn:[Download], btn:[Edit] or btn:[Delete] respectively.
