Improve containerized related wording for clarity (per feedback) (#3928)
ssl certificate management

--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -20,18 +20,24 @@ If your existing certificates have expired or stopped working for any reason, yo
 
 .Procedure: Re-Creating an Existing Server Certificate
 
-. On the {productname} Server, at the command prompt, regenerate the server certificate:
+. On the {productname} container host, at the command prompt, regenerate the server certificate:
+
 +
+
+[source,shell]
 ----
 mgrctl exec -ti -- rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 --set-state="STATE" --set-city="CITY" --set-org="ORGANIZATION" \
 --set-org-unit="ORGANIZATION UNIT" --set-email="name@example.com" \
 --set-hostname="susemanager.example.com" --set-cname="example.com"
 ----
+
++
+
 Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name of your {productname} Server.
 You can use the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
 
-The private key and the server certificate can be found in the directory `/root/ssl-build/susemanager/` as `server.key` and `server.crt`.
+The private key and the server certificate can be found inside the server container in the directory [path]``/root/ssl-build/susemanager/`` as `server.key` and `server.crt`.
 The name of the last directory depends on the hostname used with `--set-hostname` option.
 
 Deploy or import the new certificate and key with the [command]``mgr-ssl-cert-setup`` tool.
@@ -52,30 +58,42 @@ If that happens, you need an administrative user to log in to every client and d
 
 .Procedure: Creating New Certificates
 
-. On the {productname} Server, at the command prompt, move the old certificate directory to a new location:
+. On the {productname} container host, at the command prompt, move the old certificate directory to a new location:
+
 +
+
+[source,shell]
 ----
 mgrctl exec -- mv /root/ssl-build /root/old-ssl-build
 ----
+
 . Generate a new CA certificate:
+
 +
+
+[source,shell]
 ----
 mgrctl exec -ti -- rhn-ssl-tool --gen-ca --dir="/root/ssl-build" --set-country="COUNTRY" \
 --set-state="STATE" --set-city="CITY" --set-org="ORGANIZATION" \
 --set-org-unit="ORGANIZATION UNIT" --set-common-name="SUSE Manager CA Certificate" \
 --set-email="name@example.com"
 ----
+
 . Generate a new server certificate:
+
 +
+
+[source,shell]
 ----
 mgrctl exec -ti -- rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 --set-state="STATE" --set-city="CITY" --set-org="ORGANIZATION" \
 --set-org-unit="ORGANIZATION UNIT" --set-email="name@example.com" \
 --set-hostname="susemanager.example.top" --set-cname="example.com"
 ----
+
++
+
 Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name of your {productname} Server.
 You can use the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
 +
 You need to generate a server certificate also for each proxy, using their hostnames and cnames.
-
-
