--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -1,11 +1,11 @@
 [[backup-restore]]
 = Backup and Restore
 
-Back up your {productname} installation regularly, to prevent data loss.
-Because {productname} relies on a database as well as the installed program and configurations, it is important to back up all components of your installation.
-This chapter contains information on the files you need to back up, and introduces the [command]``smdba`` tool to manage database backups.
-It also contains information about restoring from your backups in the case of a system failure.
+This chapter contains information on the files you need to back up, and introduces the [command]``mgradm backup`` tool to create {productname} backups and information about restoring from your backups in the case of a system failure.
 
+Because {productname} relies on a database as well as the installed program and configurations, it is important to back up all components of your installation.
+
+Back up your {productname} installation regularly to prevent data loss and enable quick recovery.
 
 [IMPORTANT]
 ====
@@ -13,474 +13,159 @@ Regardless of the backup method you use, you must have available at least three 
 Running out of space can result in backups failing, so check this often.
 ====
 
-The following section describes backing up data within the {productname} container.
+[NOTE]
+====
+[command]``smdba`` backup tool is deprecated in {productname}
+====
 
-
-
-[[backup-restore-product]]
+[[backup-product]]
 == Back up {productname}
 
-The most comprehensive method for backing up your {productname} installation is to back up the relevant files and directories.
+The most comprehensive method for backing up your {productname} installation is to use [command]``mgradm backup create`` command.
 This can save you time in administering your backup, and can be faster to reinstall and re-synchronize in the case of failure.
 However, this method requires significant disk space and could take a long time to perform the backup.
 
-[NOTE]
+[command]``mgradm backup create`` command performs backup to a directory. This directory can be both local or mounted remote storage.
+
+[command]``mgradm backup create`` command allows various customizations of the content of the backup. For all available options, see [command]``mgradm backup create --help``.
+
+=== Full backup of {productname}
+
+Full backup of the {productname} consists of backup of:
+
+- {productname} volumes
+- database volumes
+- podman network configuration
+- podman secrets
+- {productname} systemd services
+- {productname} container images
+
+[WARNING]
 ====
-If you want to back up only the required files and directories, use the following list.
-To make this process simpler, and more comprehensive, we recommend backing up the entire [path]``/etc`` and [path]``/root`` directories within the container, not just the ones specified here.
-Some files only exist if you are actually using the related {productname} feature.
+{productname} service is automatically stopped during creation of full backup
 ====
 
+.Procedure: Creating full backup using [command]``mgradm backup create`` command.
+. On the container host, as root, create backup with
++
+[source,shell]
+----
+mgradm backup create $path
+----
++
+Replace [literal]``$path`` by the path to the backup location.
 
-* [path]``/etc/cobbler/``
-* [path]``/etc/dhcp.conf``
-* [path]``/etc/fstab`` and any ISO mount points you require.
+=== Partial backup of {productname}
+
+[command]``mgradm backup create`` tool allows creating partial backups. It is possible to skip individual or all volumes, skip database backup and images.
+
+Particularly when database backup is skipped, backup is created without stopping {productname} services and can act as a one phase in two phase backup procedure.
+
+[WARNING]
+====
+Partial backup cannot guarantee backup/restore consistency.
+====
+
+.Procedure: Creating partial backup by skipping database backup.
+. On the container host, as root, create backup with
 +
-If your UUID has changed, ensure you have updated the ``fstab`` entries  accordingly.
-* [path]``/etc/rhn/``
-* [path]``/etc/salt``
-* [path]``/etc/sudoers``
-* [path]``/etc/sysconfig/rhn/``
-* [path]``/root/.gnupg/``
-* [path]``/root/.ssh``
+[source, shell]
+----
+mgradm backup create --skipdatabase $path
+----
+Replace [literal]``$path`` by the path to the backup location.
+
+.Procedure: Creating partial backup by skipping a volume.
+. On the container host, as root, create backup with
 +
-This file exists if you are using an SSH tunnel or SSH [command]``push``.
-You also need to have saved a copy of the ``id-susemanager`` key.
-* [path]``/root/ssl-build/``
-* [path]``/srv/formula_metadata``
-* [path]``/srv/pillar``
-* [path]``/srv/salt``
-* [path]``/srv/susemanager``
-* [path]``/srv/tftpboot/``
-* [path]``/srv/www/cobbler``
-* [path]``/srv/www/htdocs/pub/``
-* [path]``/srv/www/os-images``
-* [path]``/var/cache/rhn``
-* [path]``/var/cache/salt``
-* [path]``/var/lib/cobbler/``
-* [path]``/var/lib/cobbler/templates/`` (before version 4.0 it is [path]``/var/lib/rhn/kickstarts/``)
-* [path]``/var/lib/Kiwi``
-* [path]``/var/lib/rhn/``
-* [path]``/var/run/pgsql/``
-* [path]``/var/lib/salt/``
-* [path]``/var/run/salt/``
-* [path]``/var/spacewalk/``
-* Any directories containing custom data such as scripts, Kickstart or AutoYaST profiles, and custom RPMs.
+[source, shell]
+----
+mgradm backup create --skipvolumes $volumes $path
+----
+Replace [literal]``$path`` by the path to the backup location.
++
+Replace [literal]``$volumes`` by the name of the volume name to be included in the backup. Or comma separated list of volumes to include.
++
+Use [literal]``all`` to skip all volumes, except database volumes.
+
+=== Backing up extra volumes
+
+[command]``mgradm backup`` command uses internal list of {productname} volumes. If additional volumes were configured during the installation, or additional volumes should be added to the backup, they need to be specified using [command]``--extravolumes $volumes``
+
+.Procedure: Creating backup with additional custom volume.
+. On the container host, as root, create backup with
++
+[source, shell]
+----
+mgradm backup create --extravolumes $volume $path
+----
++
+Replace [literal]``$path`` by the path to the backup location.
++
+Replace [literal]``$volumes`` by the name of the volume name to be included in the backup. Or comma separated list of volumes to include.
+
+=== Perform a Manual Database Backup
+
+.Procedure: Performing a Manual Database Backup
+. Allocate permanent storage space for your backup.
+. At the command prompt of the {productname} container host, as root, use:
++
+[source,shell]
+----
+mgradm backup create --skipvolumes all --skipconfig --skipimages $path
+----
+
+[[restore-product]]
+== Restore {productname} from the existing backup
+
+Restoring {productname} from the existing backup will enumerate backup for volumes, images and configuration to restore. Unlike in backup create scenario, restore operation is not using an internal volume list, but automatically detect every volume or image present in the backup.
+
+After the list of items to restore is gathered, presence and integrity check is performed. Presence check ensures backup restore will not accidentally overwrite existing volumes, image or configurations. Integrity check is done by computing backup items checksums.
+
+After both checks are successful, actual backup restore is performed.
 
 [IMPORTANT]
 ====
-You also need to back up your database, which you can do with the [command]``smdba`` tool.
+{productname} services are not automatically started after backup restore is finished.
 ====
 
+.Procedure: Restoring from an existing backup
+. On the container host, as root, re-deploy the {productname} Server with
++
+[source,shell]
+----
+mgradm backup restore $path
+mgradm start
+----
++
+Replace [literal]``$path`` by the path to the backup location.
+
+Verification of the backup can be a time-consuming operation. If backup integrity is ensured by other means, verification can be skipped by using [command]``--skipverify`` option.
+
+If for some reason it is needed to skip restoring a volume present in the backup, [command]``--skipvolumes $volumes`` option can be used.
 
 
-.Procedure: Restoring from a Manual Backup
-. On the container host, as root, re-deploy the {productname} Server with ``mgradm install podman``.
+=== Recommended steps after restoring a backup
 
+.Procedure: Recommended steps after {productname} restore.
 . Re-synchronize your {productname} repositories using either the {productname} {webui}, or with the [command]``mgr-sync`` tool at the command prompt in the container.
   You can choose to re-register your product, or skip the registration and SSL certificate generation sections.
-. In the container, re-install the [path]``/root/ssl-build/rhn-org-httpd-ssl-key-pair-MACHINE_NAME-VER-REL.noarch.rpm`` package.
-. Schedule the re-creation of search indexes next time the [command]``rhn-search`` service is started.
-  This command produces only debug messages, it does not produce error messages.
-  In the container, enter:
-+
-
-----
-rhn-search cleanindex
-----
-
 . On the container host, check whether you need to restore [path]``/var/lib/containers/storage/volumes/var-spacewalk/_data/packages/``.
   If [path]``/var/lib/containers/storage/volumes/var-spacewalk/_data/packages/`` was not in your backup, you need to restore it.
   If the source repository is available, you can restore [path]``/var/lib/containers/storage/volumes/var-spacewalk/_data/packages/` with a complete channel synchronization:
 +
-
+[source,shell]
 ----
 mgrctl exec -ti -- mgr-sync refresh --refresh-channels
 ----
 
-
-
-[[backup.smdba.admin]]
-== Administering the Database with smdba
-
-The [command]``smdba`` tool is used for managing a local PostgreSQL database.
-It allows you to back up and restore your database, and manage backups.
-It can also be used to check the status of your database, and perform administration tasks, such as restarting.
-For more information about the [command]``smdba``  tool, see xref:reference:cli-smdba.adoc[].
-
-
-The [command]``smdba`` tool works with local PostgreSQL databases only, it does not work with remotely accessed databases, or Oracle databases.
-
-[IMPORTANT]
-====
-To access a shell inside the Server container, run [literal]``mgrctl term`` on the container host.
-From there, one can run the CLI tools as usual.
-====
-
-
-Check the runtime status of the database with:
-
-----
-smdba db-status
-----
-
-This command returns either ``online`` or ``offline``, for example:
-
-----
-Checking database core...       online
-----
-
-Starting and stopping the database can be performed with:
-
-----
-smdba db-start
-----
-
-And:
-
-----
-smdba db-stop
-----
-
-
-
-[[backup.smdba.backup]]
-== Database Backup with smdba
-
-The [command]``smdba`` tool performs a continuous archiving backup.
-This backup method combines a log of every change made to the database during the current session, with a series of more traditional backup files.
-When a crash occurs, the database state is first restored from the most recent backup file on disk, then the log of the current session is replayed exactly, to bring the database back to a current state.
-A continuous archiving backup with [command]``smdba`` is performed with the database running, so there is no need for downtime.
-
-This method of backing up is stable and generally creates consistent snapshots, however it can take up a lot of storage space.
-Ensure you have at least three times the current database size of space available for backups.
-You can check your current database size by navigating to [path]``/var/lib/pgsql/`` and running [command]``df -h``.
-
-The [command]``smdba`` tool also manages your archives, keeping only the most recent backup, and the current archive of logs.
-The log files can only be a maximum file size of 16{nbsp}MB, so a new log file is created when the files reach this size.
-Every time you create a new backup, previous backups are purged to release disk space.
-We recommend you use systemd timer on host system to schedule your [command]``smdba`` backups to ensure that your storage is managed effectively, and you always have a backup ready in case of failure.
-
-
-
-=== Perform a Manual Database Backup
-
-[IMPORTANT]
-====
-To access a shell inside the Server container, run [literal]``mgrctl term`` on the container host.
-From there, run command line tools as usual.
-====
-
-The [command]``smdba`` tool can be run in the container shell.
-We recommend you run a manual database backup immediately after installation, or if you have made any significant changes to your configuration.
-
-[NOTE]
-====
-When [command]``smdba`` is run for the first time, or if you have changed the location of the backup, it needs to restart your database before performing the archive.
-This results in a small amount of downtime.
-Regular database backups do not require any downtime.
-====
-
-.Procedure: Performing a Manual Database Backup
-. Allocate permanent storage space for your backup.
-  This example, in the container, uses a directory located at [path]``/var/spacewalk/``.
-  This becomes a permanent target for your backup, so ensure it remains accessible by your server at all times.
-  This directory is on persistent storage, and for more information, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
-. At the command prompt of the {productname} container host, as root, enter the server container:
-
+. Schedule the re-creation of search indexes next time the [command]``rhn-search`` service is started.
+This command produces only debug messages, it does not produce error messages.
+In the container, enter:
 +
-
 [source,shell]
 ----
-mgrctl term
-----
-
-. Inside the container, execute the following steps:
-
-+
-
---
-.. In your backup location, create a directory for the backup:
-
-+
-
-As root:
-
-+
-
-[source,shell]
-----
-install -d -o postgres -g postgres -m 700 /var/spacewalk/db-backup
-----
-
-.. To create a backup for the first time, run the [command]``smdba backup-hot`` command with the [option]``enable`` option set.
-  This creates the backup in the specified directory, and, if necessary, restart the database:
-
-+
-
-[source,shell]
-----
-smdba backup-hot --enable=on --backup-dir=/var/spacewalk/db-backup
-----
-
-+
-
-This command produces debug messages and finishes sucessfully with the output:
-
-+
-
-----
-INFO: Finished
-----
-
-.. Check that the backup files exist in the [path]``/var/spacewalk/db-backup`` directory, to ensure that your backup has been successful.
-
---
-
-
-
-[[smdba.automatic.backup.with.cron]]
-=== Scheduling Automatic Backups
-
-You do not need to shut down your system to perform a database backup with [command]``smdba``.
-However, because it is a large operation, database performance can slow down while the backup is running.
-We recommend you schedule regular database backups for a low-traffic period, to minimize disruption.
-
-[IMPORTANT]
-====
-Ensure you have at least three times the current database size of space available for backups.
-You can check your current database size by running on the container host:
-
-[source,shell]
-----
-mgrctl exec "df -h /var/lib/pgsql"
-----
-====
-
-
-.Procedure: Creating a directory for the backup (do it only once)
-
-. At the command prompt of the {productname} container host, as root, enter the server container:
-
-+
-
-[source,shell]
-----
-mgrctl term
-----
-
-. Inside the container, execute the following steps:
-
-+
-
---
-.. In your backup location, create a directory for the backup.
-   As root, enter:
-
-+
-
-[source,shell]
-----
-install -d -o postgres -g postgres -m 700 /var/spacewalk/db-backup
-----
-
---
-
-
-.Procedure: Scheduling Automatic Backups
-. On the container host, as root, create a system unit file at [path]``/etc/systemd/system/server-db-backup.service`` with the content:
-
-+
-
-----
-[Unit]
-Description="Server backup service"
-
-[Service]
-ExecStart=mgrctl exec "smdba backup-hot --enable=on --backup-dir=/var/spacewalk/db-backup"
-----
-
-. Create a systemd timer file at [path]``/etc/systemd/system/server-db-backup.timer`` with the content:
-
-+
-
-----
-[Unit]
-Description="Run server database backup relative to activation time"
-
-[Timer]
-OnCalendar=Mon..Sun *-*-* 2:00:00
-Unit=server-db-backup.service
-
-[Install]
-WantedBy=multi-user.target
-----
-
-+
-
-. Check that all configuration are correct:
-
-+
-
-[source,shell]
-----
-systemd-analyze verify /etc/systemd/system/server-db-backup.*
-----
-
-. Enable the timer:
-
-+
-
-[source,shell]
-----
-systemctl enable --now server-db-backup.timer
+rhn-search cleanindex
 ----
 
 
-
-[[backup.smdba.restore]]
-== Restore from Backup
-
-The [command]``smdba`` tool can be used to restore from backup in the case of failure.
-
-
-
-.Procedure: Restoring from Backup
-. At the command prompt of the {productname} container host, as root, enter the server container:
-
-+
-
-[source,shell]
-----
-mgrctl term
-----
-
-. Inside the container, execute the following steps:
-
-+
-
---
-.. Shut down the database:
-
-+
-
-[source,shell]
-----
-smdba db-stop
-----
-
-.. Start the restore process and wait for it to complete:
-
-+
-
-[source,shell]
-----
-smdba backup-restore start
-----
-
-.. Restart the database:
-
-+
-
-[source,shell]
-----
-smdba db-start
-----
-
-.. Check if there are differences between the RPMs and the database.
-
-+
-
-[source,shell]
-----
-spacewalk-data-fsck
-----
---
-
-
-
-[[config-smdb.archivelog]]
-== Archive Log Settings
-
-Archive logging allows the database management tool [command]``smdba`` to perform hot backups.
-In {productname} with an embedded database, archive logging is enabled by default.
-
-PostgreSQL maintains a limited number of archive logs.
-Using the default configuration, approximately 64 files with a size of 16 MiB are stored.
-
-// FIXME: Use sle 15 channels as an example
-Creating a user and syncing the channels:
-
-* SLES12-SP2-Pool-x86_64
-* SLES12-SP2-Updates-x86_64
-* SLE-Manager-Tools12-Pool-x86_64-SP2
-* SLE-Manager-Tools12-Updates-x86_64-SP2
-
-PostgreSQL generates an additional roughly 1 GB of data.
-So it is important to think about a backup strategy and create a backups in a regular way.
-
-Archive logs are stored, inside the container, at [path]``/var/lib/pgsql/data/pg_xlog/`` (postgresql).
-
-
-
-[[config-smdb.spaces]]
-== Retrieve an Overview of Occupied Database Space
-
-Database administrators may use the subcommand [command]``space-overview`` to get a report about occupied table spaces, for example:
-
-----
-mgrctl exec smdba space-overview
-----
-
-outputs:
-
-----
-SUSE Manager Database Control. Version 1.5.2
-Copyright (c) 2012 by SUSE Linux Products GmbH
-
-Tablespace  | Size (Mb) | Avail (Mb) | Use %
-------------+-----------+------------+------
-postgres    | 7         | 49168      | 0.013
-susemanager | 776       | 48399      | 1.602
-----
-
-The [command]``smdba`` command is available for PostgreSQL.
-For a more detailed report, use the [command]``space-tables`` subcommand.
-It lists the table and its size, for example:
-
-----
-mgrctl exec smdba space-tables
-----
-
-outputs:
-
-----
-SUSE Manager Database Control. Version 1.5.2
-Copyright (c) 2012 by SUSE Linux Products GmbH
-
-Table                                 | Size
---------------------------------------+-----------
-public.all_primary_keys               | 0 bytes
-public.all_tab_columns                | 0 bytes
-public.allserverkeywordsincereboot    | 0 bytes
-public.dblink_pkey_results            | 0 bytes
-public.dual                           | 8192 bytes
-public.evr_t                          | 0 bytes
-public.log                            | 32 kB
-...
-----
-
-
-== Database Connection Information
-
-Inside the container, you can set information for connecting to the {productname} database by adding or editing these variable in [path]``/etc/rhn/rhn.conf``:
-
-----
-db_backend = postgresql
-db_user = susemanager
-db_password = susemanager
-db_name = susemanager
-db_host = localhost
-db_port = 5432
-db_ssl_enabled =
-----
