--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -61,3 +61,19 @@ In case the certificates are provided by a third party instance like an own or e
 
 * For more information about creating self-signed certificates, see xref:administration:ssl-certs-selfsigned.adoc[].
 * For more information about importing certificates, see xref:administration:ssl-certs-imported.adoc[].
+
+== Providing SSL certificates to the {productname} containers
+
+=== Podman
+
+SSL certificates are stored as podman secrets and assigned to respective containers. Podman SSL secrets are:
+
+* CA certificates
+  - uyuni-ca
+  - uyuni-db-ca
+* Server certificate and key
+  - uyuni-cert
+  - uyuni-key
+* Database certificate and key
+  - uyuni-db-cert
+  - uyuni-db-key
