--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -34,7 +34,7 @@ You can use the [systemitem]``set-cname`` parameter multiple times if you requir
 The private key and the server certificate can be found in the directory `/root/ssl-build/susemanager/` as `server.key` and `server.crt`.
 The name of the last directory depends on the hostname used with `--set-hostname` option.
 
-Deploy or import the new certificate and key with the [command]``mgr-ssl-cert-setup`` tool.
+Deploy or import the new certificate and key by updating container's host podman secrets.
 For more information about importing the just generated certificate, see xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
 
 
