Apply suggestions from code review

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -24,7 +24,7 @@ Supported Key types are [literal]``RSA`` and [literal]``EC`` (Elliptic Curve).
 
 [IMPORTANT]
 ====
-Database SSL certificates requires [literal]``reportdb`` and [literal]``db`` as [literal]``Subject Alternative Name``.
+Database SSL certificates require [literal]``reportdb`` and [literal]``db`` as [literal]``Subject Alternative Name``.
 ====
 
 Third-party authorities commonly use intermediate CAs to sign requested server certificates.
@@ -90,7 +90,7 @@ To replace the certificates, you can replace the installed CA certificate with t
 
 .Procedure: Replacing All Existing Certificates
 
-. On the {productname} container host, at the command prompt, recreate podman certificate secrets
+. On the {productname} container host, at the command prompt, recreate podman certificate secrets:
 
 +
 
