--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -62,7 +62,7 @@ In case the certificates are provided by a third party instance like an own or e
 * For more information about creating self-signed certificates, see xref:administration:ssl-certs-selfsigned.adoc[].
 * For more information about importing certificates, see xref:administration:ssl-certs-imported.adoc[].
 
-== Providing SSL certificates to the {productname} containers
+== Providing SSL Certificates to the {productname} Containers
 
 === Podman
 
