--- a/modules/installation-and-upgrade/pages/container-management/containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/containers.adoc
@@ -42,7 +42,7 @@ Below is a list of containers used by {productname} {productnumber}.
 | Salt forwarder
 
 | uyuni-proxy-ssh
-| SSH forwarded
+| SSH forwarder
 
 | uyuni-proxy-tftpd
 | TFTPd to HTTP translator and forwarder
