Apply suggestions from code review
part 1

--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -15,7 +15,7 @@ Running out of space can result in backups failing, so check this often.
 
 [NOTE]
 ====
-[command]``smdba`` backup tool is deprecated in {productname}
+[command]``smdba`` backup tool is deprecated in {productname}.
 ====
 
 [[backup-product]]
@@ -25,13 +25,15 @@ The most comprehensive method for backing up your {productname} installation is 
 This can save you time in administering your backup, and can be faster to reinstall and re-synchronize in the case of failure.
 However, this method requires significant disk space and could take a long time to perform the backup.
 
-[command]``mgradm backup create`` command performs backup to a directory. This directory can be both local or mounted remote storage.
+[command]``mgradm backup create`` command performs backup to a directory.
+This directory can be both local or mounted remote storage.
 
-[command]``mgradm backup create`` command allows various customizations of the content of the backup. For all available options, see [command]``mgradm backup create --help``.
+[command]``mgradm backup create`` command allows various customizations of the content of the backup.
+For all available options, see [command]``mgradm backup create --help``.
 
-=== Full backup of {productname}
+=== Full Backup of {productname}
 
-Full backup of the {productname} consists of backup of:
+A full backup of the {productname} consists of backing up the following components:
 
 - {productname} volumes
 - database volumes
@@ -42,11 +44,11 @@ Full backup of the {productname} consists of backup of:
 
 [WARNING]
 ====
-{productname} service is automatically stopped during creation of full backup
+The {productname} service is automatically stopped during creation of a full backup.
 ====
 
-.Procedure: Creating full backup using [command]``mgradm backup create`` command.
-. On the container host, as root, create backup with
+.Procedure: Creating Full Backup with [command]``mgradm backup create``
+. On the container host, as root, create backup with:
 +
 [source,shell]
 ----
@@ -55,9 +57,10 @@ mgradm backup create $path
 +
 Replace [literal]``$path`` by the path to the backup location.
 
-=== Partial backup of {productname}
+=== Partial Backup of {productname}
 
-[command]``mgradm backup create`` tool allows creating partial backups. It is possible to skip individual or all volumes, skip database backup and images.
+[command]``mgradm backup create`` tool allows creating partial backups.
+It is possible to skip individual or all volumes, skip database backup and images.
 
 Particularly when database backup is skipped, backup is created without stopping {productname} services and can act as a one phase in two phase backup procedure.
 
@@ -66,8 +69,8 @@ Particularly when database backup is skipped, backup is created without stopping
 Partial backup cannot guarantee backup/restore consistency.
 ====
 
-.Procedure: Creating partial backup by skipping database backup.
-. On the container host, as root, create backup with
+.Procedure: Creating Partial Backup by Skipping Database Backup
+. On the container host, as root, create backup with:
 +
 [source, shell]
 ----
@@ -75,8 +78,8 @@ mgradm backup create --skipdatabase $path
 ----
 Replace [literal]``$path`` by the path to the backup location.
 
-.Procedure: Creating partial backup by skipping a volume.
-. On the container host, as root, create backup with
+.Procedure: Creating Partial Backup by Skipping a Volume.
+. On the container host, as root, create backup with:
 +
 [source, shell]
 ----
@@ -84,7 +87,7 @@ mgradm backup create --skipvolumes $volumes $path
 ----
 Replace [literal]``$path`` by the path to the backup location.
 +
-Replace [literal]``$volumes`` by the name of the volume name to be included in the backup. Or comma separated list of volumes to include.
+Replace [literal]``$volumes`` by the name of the volume name to be included in the backup, or by a comma separated list of volumes to be included.
 +
 Use [literal]``all`` to skip all volumes, except database volumes.
 
