Apply suggestions from code review
part 2

--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -93,10 +93,11 @@ Use [literal]``all`` to skip all volumes, except database volumes.
 
 === Backing up extra volumes
 
-[command]``mgradm backup`` command uses internal list of {productname} volumes. If additional volumes were configured during the installation, or additional volumes should be added to the backup, they need to be specified using [command]``--extravolumes $volumes``
+[command]``mgradm backup`` command uses internal list of {productname} volumes.
+If additional volumes were configured during the installation, or additional volumes should be added to the backup, they need to be specified using [command]``--extravolumes $volumes``.
 
-.Procedure: Creating backup with additional custom volume.
-. On the container host, as root, create backup with
+.Procedure: Creating Backup with Additional Custom Volume
+. On the container host, as root, create backup with:
 +
 [source, shell]
 ----
@@ -105,7 +106,7 @@ mgradm backup create --extravolumes $volume $path
 +
 Replace [literal]``$path`` by the path to the backup location.
 +
-Replace [literal]``$volumes`` by the name of the volume name to be included in the backup. Or comma separated list of volumes to include.
+Replace [literal]``$volumes`` by the name of the volume name to be included in the backup. or by a comma separated list of volumes to be included.
 
 === Perform a Manual Database Backup
 
@@ -119,7 +120,7 @@ mgradm backup create --skipvolumes all --skipconfig --skipimages $path
 ----
 
 [[restore-product]]
-== Restore {productname} from the existing backup
+== Restore {productname} from the Existing Backup
 
 Restoring {productname} from the existing backup will enumerate backup for volumes, images and configuration to restore. Unlike in backup create scenario, restore operation is not using an internal volume list, but automatically detect every volume or image present in the backup.
 
@@ -132,8 +133,8 @@ After both checks are successful, actual backup restore is performed.
 {productname} services are not automatically started after backup restore is finished.
 ====
 
-.Procedure: Restoring from an existing backup
-. On the container host, as root, re-deploy the {productname} Server with
+.Procedure: Restoring from an Existing Backup
+. On the container host, as root, re-deploy the {productname} Server with:
 +
 [source,shell]
 ----
@@ -148,9 +149,9 @@ Verification of the backup can be a time-consuming operation. If backup integrit
 If for some reason it is needed to skip restoring a volume present in the backup, [command]``--skipvolumes $volumes`` option can be used.
 
 
-=== Recommended steps after restoring a backup
+=== Recommended Steps after Restoring a Backup
 
-.Procedure: Recommended steps after {productname} restore.
+.Procedure: Recommended Steps after {productname} Restore
 . Re-synchronize your {productname} repositories using either the {productname} {webui}, or with the [command]``mgr-sync`` tool at the command prompt in the container.
   You can choose to re-register your product, or skip the registration and SSL certificate generation sections.
 . On the container host, check whether you need to restore [path]``/var/lib/containers/storage/volumes/var-spacewalk/_data/packages/``.
