--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -66,7 +66,8 @@ In case the certificates are provided by a third party instance like an own or e
 
 === Podman
 
-SSL certificates are stored as podman secrets and assigned to respective containers. Podman SSL secrets are:
+SSL certificates are stored as podman secrets and assigned to respective containers.
+Podman SSL secrets are:
 
 * CA certificates
   - uyuni-ca
