SUSE Manager Docs: Fix PTF URL (#3931)
Update PTF page link from "Program temporary files" to Program Temporary Fixes

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -53,7 +53,7 @@ endif::[]
 ** xref:monitoring.adoc[Monitoring with Prometheus and Grafana]
 ** xref:organizations.adoc[Organizations]
 ** xref:patch-management.adoc[Patch Management]
-** xref:ptfs.adoc[Program temporary files]
+** xref:ptfs.adoc[Program Temporary Fixes]
 ** xref:reports.adoc[Reports Generation]
 ** Security
 *** xref:master-fingerprint.adoc[Master Fingerprint]
