--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -48,6 +48,7 @@ endif::[]
 ** xref:monitoring.adoc[Monitoring with Prometheus and Grafana]
 ** xref:organizations.adoc[Organizations]
 ** xref:patch-management.adoc[Patch Management]
+** xref:ptfs.adoc[Program Temporary Fixes]
 ** xref:reports.adoc[Reports Generation]
 ** Security
 *** xref:master-fingerprint.adoc[Master Fingerprint]
