--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -6,7 +6,7 @@
 
 == Introduction 
 
-Hub online synchronization reuses the existing repository syncing mechanism and synchronizes channels in the peripheral servers from the repositories on the hub server.
+Hub online synchronization reuses the existing repository synchronization and synchronizes channels in the peripheral servers from the repositories on the hub server.
 
 Once the connection between hub and peripheral server is established, the hub server becomes the main source of data for the peripheral server.
 In case of vendor channels, hub server is effectively replacing {scclongform}.
