--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -10,7 +10,7 @@ Hub online synchronization reuses the existing repository synchronization and sy
 
 When the connection between hub and peripheral server is established, the hub server becomes the main source of data for the peripheral server.
 In case of vendor channels, hub server is effectively replacing {scclongform}.
-In case of custom channels, once they are synced, the peripheral server will fetch the packages from the hub and not from the original location of the custom channel defined on the hub.
+In case of custom channels, when they are synchronized, the peripheral server will fetch the packages from the hub and not from the original location of the custom channel defined on the hub.
 
 
 The main characteristics of this feature are:
