--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -40,7 +40,7 @@ There are two ways to register a peripheral server to the hub server:
 
 === Registration from peripheral server by token generation
 
-Before being registered to the hub server, a token needs to be generated on the peripheral server and passed it to the administrator of the hub server.
+Before being registered to the hub server, a token needs to be generated on the peripheral server and passed to the administrator of the hub server.
 
 [[peripheral-token-generation]]
 .Procedure: Generating token on the peripheral server
