--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -76,7 +76,7 @@ The generated token needs to be transferred to the hub server before it can be u
   * Use option [literal]``Upload a file`` if the servers have different certificate authorities to upload a certificate file.
   * Use option [literal]``Paste a PEM certificate`` to paste a certificate.  
 . Click button btn:[Register].
-  A newly registered peripheral serevr will appear on screen [literal]``Peripherals Configuration``.
+  A newly registered peripheral server will appear on screen [literal]``Peripherals Configuration``.
 
 
 
