--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -192,7 +192,7 @@ Therefore, when the peripheral server is downloading data from the hub server th
 To enable checking of the data integrity, the GPG key needs to be created on the hub side.
 When the peripheral server is configured to communicate with the hub, the public GPG key will then automatically be transferred to it.
 
-Once the GPG key is created on the hub, field [literal]``GPG Public Key`` will be set to show that this serevr is using the GPG key.
+When the GPG key is created on the hub, field [literal]``GPG Public Key`` will be set to show that this server is using the GPG key.
 For more information about setting up own GPG key, see xref:administration:repo-metadata.adoc[].
 
 
