--- a/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-online-sync.adoc
@@ -189,7 +189,7 @@ When the metadata on the hub server are signed with a GPG key, the public key is
 By default, {productname} is not signing metadata.
 Therefore, when the peripheral server is downloading data from the hub server there is no way of checking if the downloaded metadata have a valid signature, unless the customer has created their own GPG key.
 
-To enable checking of the data integrity, the GPG key needs to be created on the hub side.
+To enable checking of the data integrity, the GPG key needs to be created on the hub.
 When the peripheral server is configured to communicate with the hub, the public GPG key will then automatically be transferred to it.
 
 When the GPG key is created on the hub, field [literal]``GPG Public Key`` will be set to show that this server is using the GPG key.
